fix: overflow-x

--- a/assets/src/components/cluster-status/index.less
+++ b/assets/src/components/cluster-status/index.less
@@ -8,6 +8,8 @@
 .cluster-status-content {
   overflow: hidden;
   display: flex;
+  overflow-x: auto;
+
   & > div {
     width: 49%;
     margin: 5px auto;
